<resources>
    <string name="app_name">Smart PDF Editor</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_adaptive_banner_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_open_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id">/6499/example/native</string>
    <string name="admob_simple_native_id">10104090</string>
    <string name="admob_reward_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="selectLanguage">Select Language</string>
    <string name="document_properties_retrieval_failed">Failed to obtain document metadata</string>
    <string name="document_properties_invalid_date">Invalid date</string>
    <string name="sys_button_ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="io_error">Received I/O error trying to open content</string>
    <string name="action_first">First Page</string>
    <string name="action_jump_to_page">Jump To Page#</string>
    <string name="action_last">Last Page</string>
    <string name="action_next">Next</string>
    <string name="action_open">Open Doc</string>
    <string name="action_previous">back</string>
    <string name="action_rotate_clockwise">Rotate ClockWise</string>
    <string name="action_rotate_counterclockwise">Rotate AntiClock Wise</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_document_properties">Properties</string>
    <string name="action_zoom_in">Zoom In</string>
    <string name="action_zoom_out">Zoom Out</string>
    <string name="create_pdf_msg">Created pdf with</string>
    <string name="File_hint_two">File Path for PDF two</string>
    <string name="Filter_image_preview">Filter Image Preview</string>
    <string name="Filter_name">Filter</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="a4">A4</string>
    <string name="about_us">About Us</string>
    <string name="about_dark">Dark Theme</string>
    <string name="add_images">Add Images</string>
    <string name="add_margins">Add Margins</string>
    <string name="add_password">Add password</string>
    <string name="add_text">Add Text</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="advertizment">Advertisement</string>
    <string name="album_name_all">All Media</string>
    <string name="allow_storage_permission">Allow permissions to view files</string>
    <string name="answer">Answer</string>
    <string name="app_description">An easy to use Android application to convert your files to PDF.</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="b0_to_b10">B0 to B10</string>
    <string name="border">Add Image Border</string>
    <string name="border_dialog_title">Border width : %d</string>
    <string name="border_width_prompt">Enter border width units</string>
    <string name="bottom">Bottom</string>
    <string name="btn_sav_text">savText</string>
    <string name="bundleKey">ImageUri</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="cannot_add_watermark">Watermark could not be added to the PDF. Please check the PDF again.</string>
    <string name="change_master_pwd">Change Master password</string>
    <string name="choose_color_text">Choose a color :</string>
    <string name="choose_page_number_style">Choose Page Number Style</string>
    <string name="choose_watermark_color">Choose color</string>
    <string name="choose_watermark_font_family">Choose font family</string>
    <string name="choose_watermark_style">Choose style</string>
    <string name="compress_dialog_enter_prompt">Enter here</string>
    <string name="compress_dialog_percentage">%</string>
    <string name="compress_image">Image compression :  %%</string>
    <string name="compress_info">Congratulations! Your PDF is compressed: \10 Original PDF Size :  \10 Compressed PDF Size: </string>
    <string name="compress_pdf">Compress PDF</string>
    <string name="compress_pdf_prompt">Enter % compression of PDF :</string>
    <string name="compression_image_edit">Change image compression value</string>
    <string name="confirm_exit_message">Press back again to exit</string>
    <string name="convert_to_pdf">convert to PDF</string>
    <string name="converting_file_message">Converting your files to PDF.</string>
    <string name="courier">COURIER</string>
    <string name="create_images">Create Images</string>
    <string name="create_new_pdfs">Create New PDF</string>
    <string name="create_pdf">Create PDF</string>
    <string name="create_pdf_text">Create PDF</string>
    <string name="created">Created</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="creating_txt">Creating Text File</string>
    <string name="cropImage_activityTitle">Crop Image</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="current_master_pwd">The current master password is \"%1$s\" for every encrypted PDF. You can change it here:</string>
    <string name="decrypt_message">Enter the password to continue</string>
    <string name="decrypt_protected_file">Selected pdf is password protected. Enter the password to continue…</string>
    <string name="decrypted">Decrypted</string>
    <string name="decrypted_file">_unencrypted.pdf</string>
    <string name="default_content_description">no description</string>
    <string name="default_font_family_text">Font Family (Default : )</string>
    <string name="default_page_size">DEFAULT (  )</string>
    <string name="degree_180">180 °</string>
    <string name="degree_270">270 °</string>
    <string name="degree_90">90 °</string>
    <string name="delete">Delete</string>
    <string name="delete_alert_selected">Do you want to delete all selected files?</string>
    <string name="delete_alert_singular">Do you want to delete selected file?</string>
    <string name="delete_history_message">Are you sure you want to delete history?</string>
    <string name="deleted">Deleted</string>
    <string name="details">Details</string>
    <string name="directory_deleted">Directory deleted</string>
    <string name="done">Done</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="edit_font_size">Font Size (Default : %d)</string>
    <string name="edit_images_text">Edit Images</string>
    <string name="empty_image_description">NoPdfs</string>
    <string name="empty_text">No media yet</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="encrypted_file_text">encrypted file</string>
    <string name="encrypted_pdf">PDF is password protected</string>
    <string name="enhance_created_pdfs">Enhance Created PDFs</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="enter_font_size">Enter font size</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_custom">Enter Password</string>
    <string name="enter_rotation_angle">Enter Rotation Angle</string>
    <string name="enter_watermark_angle">Enter angle</string>
    <string name="enter_watermark_font_size">Enter font size</string>
    <string name="enter_watermark_text">Enter text</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_invalid_input">Invalid input</string>
    <string name="error_no_image_in_zip">ZIP file contains no image</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_open_file">An error occurred while opening the file. Please try reopening</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_quality">Over quality</string>
    <string name="error_page_number">Invalid page number</string>
    <string name="error_page_range">Invalid range input</string>
    <string name="error_path_not_found">Sorry, we are unable to access the file at this location</string>
    <string name="error_pdf_not_created">Sorry, PDF was not created. Please try again</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_under_quality">Under quality</string>
    <string name="excel_to_pdf">Excel to PDF</string>
    <string name="extract_images">Extract Images</string>
    <string name="extract_text">Extract Text</string>
    <string name="extras">Extras</string>
    <string name="faqs">FAQ</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="home_page">Home</string>
    <string name="images_to_pdf">Images to PDF</string>
    <string name="invert_pdf">Invert Pdf</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="modify_existing_pdfs">Modify existing PDFs</string>
    <string name="more_options">More Options</string>
    <string name="open_pdf_text">Open PDF</string>
    <string name="pdf_to_images">PDF to Images</string>
    <string name="qr_barcode_pdf">QR &amp; Barcodes</string>
    <string name="qrbarcodes_to_pdf">Create PDF from QR &amp; Barcode</string>
    <string name="rate_us">Rate Us</string>
    <string name="remove_duplicate_pages">Remove Duplicate Pages</string>
    <string name="remove_pages">Remove Pages</string>
    <string name="remove_password">Remove password</string>
    <string name="reorder_pages">Reorder Pages</string>
    <string name="rotate_pages">Rotate Pages</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="split_pdf">Split PDF</string>
    <string name="text_to_pdf">Text To PDF</string>
    <string name="viewFiles">View Files</string>
    <string name="view_pdfs">View PDFs</string>
    <string name="watermark_angle_hint">min : 0 to Max : 360</string>
    <string name="watermark_font_size_hint">min : 1 to Max : 36</string>
    <string name="zip_to_pdf">ZIP to PDF</string>
    <string name="Languages">Languages</string>
    <string name="privacy" translatable="false">Privacy Policy</string>
</resources>