<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_zoom_in"
        android:icon="@drawable/ic_zoomin"
        android:title="@string/action_zoom_in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zoom_out"
        android:icon="@drawable/ic_zoomout"
        android:title="@string/action_zoom_out"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_first"
        android:title="@string/action_first"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_last"
        android:title="@string/action_last"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_jump_to_page"
        android:title="@string/action_jump_to_page"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rotate_clockwise"
        android:title="@string/action_rotate_clockwise"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rotate_counterclockwise"
        android:title="@string/action_rotate_counterclockwise"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_document_properties"
        android:title="@string/action_view_document_properties"
        app:showAsAction="never" />
</menu>
