<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_watermark_text"
        android:fontFamily="@font/sfpro_display_medium"
        android:textColor="@color/blackNew"
        android:textSize="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintEnabled="false"
        android:layout_marginLeft="3dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/watermarkText"
            android:layout_width="match_parent"
            style="@style/styleTextInputEditText"
            android:fontFamily="@font/sfpro_display_medium"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_watermark_angle"
        android:fontFamily="@font/sfpro_display_medium"
        android:textColor="@color/blackNew"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/watermarkAngle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sfpro_display_medium"
        android:hint="@string/watermark_angle_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_watermark_color"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfpro_display_medium"
        android:textColor="@color/blackNew"
        android:textSize="16dp" />

    <com.github.danielnilsson9.colorpickerview.view.ColorPickerView
        android:id="@+id/watermarkColor"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        app:alphaChannelVisible="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_watermark_font_size"
        android:fontFamily="@font/sfpro_display_medium"
        android:textColor="@color/blackNew"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/watermarkFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sfpro_display_medium"
        android:hint="@string/watermark_font_size_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_display_medium"
        android:text="@string/choose_watermark_font_family"
        android:layout_marginTop="10dp"
        android:textColor="@color/blackNew"
        android:textSize="16dp"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_bg">

        <Spinner
        android:id="@+id/watermarkFontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:spinnerMode="dropdown" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_display_medium"
        android:text="@string/choose_watermark_style"
        android:textColor="@color/blackNew"
        android:layout_marginTop="10dp"
        android:textSize="16dp"  />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_bg">
    <Spinner
        android:id="@+id/watermarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:spinnerMode="dropdown" />
    </LinearLayout>
</LinearLayout>
