<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutDelete"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sfpro_display_bold"
            android:gravity="center_horizontal"
            android:padding="5sp"
            android:text="@string/qrbarcodes_to_pdf"
            android:textColor="@color/opposite_theme"
            android:textSize="@dimen/_13sdp" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/pdfOpen"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:gravity="center"
            android:text="@string/open_pdf_text"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.templatemela.smartpdfreader.customviews.MyCardView
                android:id="@+id/scan_qrcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:option_icon="@drawable/ic_qr_barcode"
                app:option_text="@string/scan_qrcode"
                app:tint="?attr/actionBarItemBackground" />

            <com.templatemela.smartpdfreader.customviews.MyCardView
                android:id="@+id/scan_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:option_icon="@drawable/ic_barcode"
                app:option_text="@string/scan_barcode" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" />
</RelativeLayout>
